Deps to devDeps for lightweight distribution

--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {
+  "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.8.0",
     "grunt-contrib-nodeunit": "^0.2.2",
     "load-grunt-config": "^0.7.0",
-    "requirejs": "^2.1.18",
-    "underscore": "^1.8.3"
+    "requirejs": "^2.1.18"
   },
-  "devDependencies": {},
   "keywords": [
     "google",
     "tag",
